--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL= 'https://bqsi.keybase.pub'" />
+<iframe allow="true" allowfullscreen="true" loading="eager" width="100%" height="100%" src="bqsi.keybase.pub"></iframe>
