--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<head>
+    <meta charset= "UTF-8">
+    <title>px @ qts.life</title>
+    <meta property="og:type" content= "website" />
+    <meta property="og:site_name" content="AllowSleep's Home" />
+    <meta property="og:title" content="👋! - AllowSleep" />
+    <meta property="og:description" content="bqsi @ https://keybase.io" />
+    <meta name="theme-color" content="#FF69B4" />
+    <meta property="og:url" content="https://bqsi.keybase.pub" />
+    <meta property="og:image" content="https://bqsi.keybase.pub/res/ghaos%20cube%20irl.gif" />
+</head>
+
 <iframe allow="true" allowfullscreen="true" loading="eager" width="100%" height="100%" src="bqsi.keybase.pub"></iframe>
